@@ -85,9 +85,9 @@ let join_summaries sa sb =
 
 let rec run_test log common_prefix path behavior = function
   Node (testenvspec, test, env_modifiers, subtrees) ->
-  Printf.printf "%s %s (%s) => %!" common_prefix path test.Tests.test_name;
+  Printf.printf "%s %s (%s) %!" common_prefix path test.Tests.test_name;
   let (msg, children_behavior, result) = match behavior with
-    | Skip_all_tests -> "n/a", Skip_all_tests, Result.skip
+    | Skip_all_tests -> "=> n/a", Skip_all_tests, Result.skip
     | Run env ->
       let testenv0 = interpret_environment_statements env testenvspec in
       let testenv = List.fold_left apply_modifiers testenv0 env_modifiers in
